2014-05-19  Joern Rennecke <joern.rennecke@embecosm.com>

	* include/Makefile.am (avr_HEADERS): Add signal.h .
	* include/signal.h: New file.

2014-05-02  Pieter Agten  <pieter.agten@gmail.com>

	* include/avr/iom328p.h (EFUSE_DEFAULT): update default value.

2014-05-01  Joern Rennecke  <joern.rennecke@embecosm.com>

	* include/math.h (sqrtf): Don't #define, declare.
	* libm/fplib/asmdef.h (ALIAS_ENTRY): Define.
	* libm/fplib/sqrt.S (sqrtf): New ALIAS_ENTRY.

2014-05-01  Joern Rennecke  <joern.rennecke@embecosm.com>

	* configure.ac (AC_CONFIG_FILES): Add include/sys/Makefile.
	* include/Makefile.am (avr_HEADERS): Add fcntl.h, locale.h, unistd.h.
	(SUBDIRS): Add sys.
	* include/errno.h: Add definitions for error codes required to compile
	libstdc++-v3.
	* include/locale.h, include/unistd.h, include/fcntl.h: New files.
	* include/stdio.h (FILE): Change to a typedef.
	(BUFSIZ, _IONBF): Define.
	(fpos_t): Typedef.
	(fgetpos, fopen, freopen, fdopen, fseek, fsetpos, ftell): Prototype.
	(ftell, fileno, perror, remote, rename, rewind, setbuf): Likewise.
	(setvbuf, tmpfile, tmpnam): Likewise.
	* include/stdlib.h (atexit, system, getenv): Prototype.
	* include/string.h (strcoll, strerror, strxfrm): Prototype.
	* include/sys: New directory.
	* include/time.h (_CLOCKS_PER_SEC_): Declare.
	(CLOCKS_PER_SEC): Define.
	(clock): Declare.
	* libc/stdlib/Files.am (stdlib_a_c_sources): Add atexit.c, getenv.c,
	system.c
	* libc/stdlib/atexit.c: New file.
	* libc/stdlib/getenv.c, * libc/stdlib/system.c: New stub files.

2014-05-01  Joern Rennecke  <joern.rennecke@embecosm.com>

	* include/stdint.h [!__USING_MINT8] (UINT8_MAX): Provide (signed)
	int value.
	(SIZE_MAX): Define as UINT16_MAX.
	[!WCHAR_MAX] (WCHAR_MAX, WCHAR_MIN): Define.
	[!WINT_MAX] (WINT_MAX, WINT_MIN): Define.

2014-05-01  Joern Rennecke  <joern.rennecke@embecosm.com>

	* include/stdint.h (INT8_C): Also define for __cplusplus >= 201103L.
	If __INT8_C is defined, use GNU C preprocessor builtin-macro
	for the definition.